--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,16 +1,6 @@
-# Użyj oficjalnego, lekkiego obrazu Python
 FROM python:3.10-slim
-
-# Ustaw katalog roboczy w kontenerze
 WORKDIR /app
-
-# Skopiuj plik z zależnościami i zainstaluj je
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Skopiuj resztę kodu aplikacji
+RUN pip install -r requirements.txt
 COPY . .
-
-# Uruchom aplikację
 CMD ["python", "main.py"]
-
