save command: abandon n8n, migrate that logic into .py code

--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,4 +1,15 @@
+# --- Konfiguracja dla PyTorch (CPU-only) ---
+# Mówimy pip, aby oprócz standardowego repozytorium (PyPI),
+# sprawdzał również to specjalne repozytorium dla wersji CPU PyTorch.
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+# --- Główne zależności bota ---
+torch
+torchvision
+torchaudio
 discord.py
 python-dotenv
 requests
 PyGithub
+chromadb-client
+sentence-transformers
