--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,6 +1,13 @@
+# bot/Dockerfile
 FROM python:3.10-slim
 WORKDIR /app
-COPY requirements.txt .
+
+# Kopiujemy TYLKO plik z zależnościami z folderu bot
+COPY bot/requirements.txt .
 RUN pip install -r requirements.txt
-COPY . .
+
+# Kopiujemy zawartość folderu 'bot' do '/app'
+COPY ./bot/. .
+
+# ZMIANA: Wracamy do prostszego polecenia startowego, które działa z importami bezwzględnymi
 CMD ["python", "main.py"]
