--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,28 @@
+# docker-compose.yml
 services:
-  n8n:
-    image: n8nio/n8n
+  qdrant:
+    image: qdrant/qdrant:latest
     restart: always
     ports:
-      # Port 3000 jest zajęty, więc mapujemy port 5679 na serwerze
-      # na domyślny port 5678 wewnątrz kontenera n8n.
-      # Dostęp do n8n będzie pod adresem: http://<TWOJ_VPS_IP>:5679
-      - "5679:5678"
-    environment:
-      - TZ=Europe/Warsaw
-      - N8N_SECURE_COOKIE=false
-      - WEBHOOK_URL=http://83.168.69.143:5679/
+      # Port 6333 dla API i interfejsu webowego
+      - "6333:6333"
+      # Port 6334 dla gRPC (opcjonalnie, ale dobra praktyka)
+      - "6334:6334"
     volumes:
-      - n8n_data:/home/node/.n8n
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:5678/healthz"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  chromadb:
-    image: chromadb/chroma
-    restart: always
-    ports:
-      # Port 8000 jest zajęty, więc mapujemy port 8001 na serwerze
-      # na domyślny port 8000 wewnątrz kontenera ChromaDB.
-      # Dostęp do API ChromaDB będzie pod adresem: http://<TWOJ_VPS_IP>:8001
-      - "8001:8000"
-    volumes:
-      - chroma_data:/chroma/.chroma/index
+      # Używamy nazwanego wolumenu do przechowywania danych Qdrant
+      - qdrant_data:/qdrant/storage
 
   discord-bot:
-    build: ./bot
+    build:
+      context: . # Ustawia główny katalog projektu jako kontekst
+      dockerfile: bot/Dockerfile # Wskazuje dokładną lokalizację Dockerfile
     restart: always
     env_file:
       - .env
+    environment:
+      - PYTHONUNBUFFERED=1
     depends_on:
-      n8n:
-        condition: service_healthy
+      - qdrant
 
 volumes:
-  n8n_data:
-  chroma_data:
+  qdrant_data:
