--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,50 +1,61 @@
-name: Sync Knowledge Base to ChromaDB
+# .github/workflows/sync.yml
+name: Sync Knowledge Base to Qdrant
 
 on:
   push:
     branches:
       - main
-    # Uruchom workflow TYLKO, jeśli zmieni się jeden z plików z manifestu
-    # lub sam manifest. To oszczędza zasoby.
     paths:
-      - "it/linki.md"
-      - "marketing/zasoby.md"
-      - "projekty/ciekawe_narzedzia.md"
-      - ".knowledge_manifest.yml"
-  workflow_dispatch: # Umożliwia ręczne uruchomienie z interfejsu GitHub
+      - 'it/**'
+      - 'marketing/**'
+      - 'projekty/**'
+      - '.knowledge_manifest.yml'
+  workflow_dispatch:
 
 jobs:
   sync-data:
     runs-on: ubuntu-latest
     steps:
-      - name: 1. Checkout repository code
+      # KROK 1: Pobierz zawartość TEGO repozytorium (z wiedzą)
+      - name: 1. Checkout Knowledge Base repository
         uses: actions/checkout@v4
 
+      # KROK 2: Ustawienie Pythona (robimy to wcześniej)
       - name: 2. Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
-      - name: 3. Cache Python dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+      # KROK 3: Pobierz TYLKO niezbędne pliki z repozytorium bota
+      # To jest implementacja Twojego pomysłu - "sparse checkout".
+      - name: 3. Sparse checkout sync script from Bot repository
+        run: |
+          # Tworzymy folder na kod bota
+          mkdir skryba-bot-code
+          cd skryba-bot-code
 
-      - name: 4. Cache Sentence Transformers model
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/torch/sentence_transformers
-          key: ${{ runner.os }}-st-cache-paraphrase-multilingual-mpnet-base-v2
-          restore-keys: |
-            ${{ runner.os }}-st-cache-
+          # Inicjalizujemy puste repozytorium Git
+          git init
+          git remote add origin https://github.com/Wiecek-K/discord-skryba-bot.git
 
-      - name: 5. Install Python dependencies
-        run: pip install -r requirements.txt
+          # Włączamy tryb sparse-checkout, który pozwala pobierać tylko wybrane foldery
+          git config core.sparseCheckout true
 
-      - name: 6. Run the sync script
-        run: python bot/scripts/sync_to_chroma.py
+          # Definiujemy, które DOKŁADNIE pliki/foldery chcemy pobrać.
+          # Potrzebujemy skryptu ORAZ pliku z jego zależnościami.
+          echo "bot/scripts/" >> .git/info/sparse-checkout
+          echo "requirements.txt" >> .git/info/sparse-checkout
+
+          # Pobieramy tylko gałąź 'main' i tylko zdefiniowane wyżej pliki
+          git pull --depth=1 origin main
+        
+      # KROK 4: Zainstaluj zależności z pobranego pliku requirements.txt
+      - name: 4. Install Python dependencies from bot repo
+        run: pip install -r skryba-bot-code/requirements.txt
+
+      # KROK 5: Uruchom skrypt synchronizujący
+      - name: 5. Run the sync script from bot repo
+        run: python skryba-bot-code/bot/scripts/sync_to_qdrant.py
         env:
-          CHROMA_HOST: ${{ secrets.CHROMA_HOST_IP }}
+          QDRANT_HOST: ${{ secrets.QDRANT_HOST_IP }}
+          QDRANT_PORT: 6333
